src/raml1/test/data/TCK/raml-1.0/InvalidIncludeTags/test004/api.raml

#%RAML 1.0
title: test API

/resource:
  get:
    responses: ./responses.raml
